--- a/app/assets/templates/hovercard_tpl.jst.hbs
+++ b/app/assets/templates/hovercard_tpl.jst.hbs
@@ -7,7 +7,7 @@
   </h4>
   <div class="handle"></div>
   <div id="hovercard_dropdown_container"></div>
-  <div class="hovercard_footer">
+  <div class="card_footer">
     <div class="footer_container">
       <div class="hashtags"></div>
     </div>
