--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -25,8 +25,9 @@
   .avatar {
     height: auto;
     margin-bottom: 20px;
-    max-width: 200px;
+    /*max-width: 200px;*/
     width: auto;
+    max-width: 100%;
   }
 }
 
